added data structure working on testing

--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,8 @@ sentry-sdk = "*"
 trio = "*"
 uvicorn = "*"
 drf-nested-routers = "*"
+django-bitcoin = "*"
+base58 = "*"
 
 [dev-packages]
 black = "*"
