--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,15 @@
     "editor.formatOnSave": false,
     "[python]": {
       "editor.formatOnSave": true,
-     },
+    },
+    "python.linting.enabled": true,
+    "python.testing.unittestArgs": [
+      "-v",
+      "-s",
+      "./api",
+      "-p",
+      "*test*.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true,
 }
