--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,13 +6,6 @@
       "editor.formatOnSave": true,
     },
     "python.linting.enabled": true,
-    "python.testing.unittestArgs": [
-      "-v",
-      "-s",
-      "./api",
-      "-p",
-      "*test*.py"
-    ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true,
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
 }
