--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ author_email = copeland.abel@s-sm.org
 package_dir = 
     = api
 packages = find:
-scripts = api/manage.Python
+scripts = api/manage.py
 
 [options.packages.find]
 where = api
